--- a/tailieu.html
+++ b/tailieu.html
@@ -177,18 +177,24 @@
   <main>
     <div class="doc-main">
       <div class="doc-title">Tài liệu học tập</div>
-      <div class="doc-btn-group">
-        <a href="https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EiVg0xnltrpModJPUdTCcOEBsUtIjA1haF4Jhb_Yv83mQA?e=ea78Ww" 
-          target="_blank" class="doc-btn epu">
-          <span class="icon">📚</span> Tài liệu EPU
-        </a>
-        <a href="https://your-link-tieng-anh" target="_blank" class="doc-btn english">
-          <span class="icon">🇬🇧</span> Tài liệu Tiếng Anh
-        </a>
-        <a href="https://your-link-tmu" target="_blank" class="doc-btn tmu">
-          <span class="icon">🏛️</span> Tài liệu TMU
-        </a>
-      </div>
+<div class="doc-btn-group">
+  <a href="https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EiVg0xnltrpModJPUdTCcOEBsUtIjA1haF4Jhb_Yv83mQA?e=ea78Ww" 
+    target="_blank" class="doc-btn epu">
+    <span class="icon">📚</span> Tài liệu EPU
+  </a>
+  <a href="https://your-link-tieng-anh" target="_blank" class="doc-btn english">
+    <span class="icon">🇬🇧</span> Tài liệu Tiếng Anh
+  </a>
+  <a href="https://your-link-tmu" target="_blank" class="doc-btn tmu">
+    <span class="icon">🏛️</span> Tài liệu TMU
+  </a>
+  <a href="#" class="doc-btn soon" style="pointer-events:none; opacity:0.65;">
+    <span class="icon">⏳</span> Soon
+  </a>
+  <a href="#" class="doc-btn soon" style="pointer-events:none; opacity:0.65;">
+    <span class="icon">⏳</span> Soon
+  </a>
+</div>
     </div>
   </main>
   <footer id="footer"></footer>
