--- a/tailieu.html
+++ b/tailieu.html
@@ -126,6 +126,7 @@
     .doc-btn.epu { background: linear-gradient(90deg, #3864e6 18%, #2fc2ea 100%);}
     .doc-btn.english { background: linear-gradient(90deg, #d6a23f 18%, #ff5c85 90%);}
     .doc-btn.tmu { background: linear-gradient(90deg, #34ca7a 10%, #3ebea7 100%);}
+    .doc-btn.soon { background: linear-gradient(90deg, #35ca7a 10%, #3ebea6 100%);}
     .doc-btn .icon {
       margin-right: 10px; font-size: 1.35em;
       filter: drop-shadow(0 1px 4px #185adb23);
@@ -188,10 +189,10 @@
   <a href="https://your-link-tmu" target="_blank" class="doc-btn tmu">
     <span class="icon">🏛️</span> Tài liệu TMU
   </a>
-  <a href="#" class="doc-btn soon" style="pointer-events:none; opacity:0.65;">
+  <a href="#" class="doc-btn soon" target="_blank" class="doc-btn soon">
     <span class="icon">⏳</span> Soon
   </a>
-  <a href="#" class="doc-btn soon" style="pointer-events:none; opacity:0.65;">
+  <a href="#" class="doc-btn soon" target="_blank" class="doc-btn soon">
     <span class="icon">⏳</span> Soon
   </a>
 </div>
