--- a/tailieu.html
+++ b/tailieu.html
@@ -189,7 +189,7 @@
   <a href="https://your-link-tmu" target="_blank" class="doc-btn tmu">
     <span class="icon">🏛️</span> Tài liệu TMU
   </a>
-  <a href="https://your-link-soon" class="doc-btn soon" target="_blank" class="doc-btn soon">
+  <a href="#" class="doc-btn soon" target="_blank" class="doc-btn soon">
     <span class="icon">⏳</span> Soon
   </a>
   <a href="#" class="doc-btn soon" target="_blank" class="doc-btn soon">
