--- a/tailieu.html
+++ b/tailieu.html
@@ -183,10 +183,10 @@
     target="_blank" class="doc-btn epu">
     <span class="icon">📚</span> Tài liệu EPU
   </a>
-  <a href="https://your-link-tieng-anh" target="_blank" class="doc-btn english">
+  <a href="https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/Ej4ERPmj5_NPh1yKDataoG0BXvoiBQ2IbxAG5U09gB6vVA?e=3gogV4" target="_blank" class="doc-btn english">
     <span class="icon">🇬🇧</span> Tài liệu Tiếng Anh
   </a>
-  <a href="https://your-link-tmu" target="_blank" class="doc-btn tmu">
+  <a href="https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/ErjspIucpIhCi-wujB9HIR4BggIJ8ym_aps6mldfDpRu-Q?e=lfBDaD" target="_blank" class="doc-btn tmu">
     <span class="icon">🏛️</span> Tài liệu TMU
   </a>
   <a href="#" class="doc-btn soon" target="_blank" class="doc-btn soon">
