--- a/tailieu.html
+++ b/tailieu.html
@@ -179,14 +179,16 @@
     <div class="doc-main">
       <div class="doc-title">Tài liệu học tập</div>
 <div class="doc-btn-group">
-  <a href="https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/Esj4_rp5Z1JOnSxBYofnPt0BEUned6731tCZEBf8r_Q-Wg?e=vGrTzb" 
+  <a href="https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/Etg1I4MOqspNmjf0jplA_l4BegN8yNa1NzpwYUTYd1mDPg?e=GqkDDI" 
     target="_blank" class="doc-btn epu">
     <span class="icon">📚</span> Tài liệu EPU
   </a>
-  <a href="https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/Ej4ERPmj5_NPh1yKDataoG0BXvoiBQ2IbxAG5U09gB6vVA?e=3gogV4" target="_blank" class="doc-btn english">
+  <a href="https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/ElTA6Kwz0tVFiX9ZEwn5Fl0BZoY0Ln0eYl_gMlCpxCDsZQ?e=npfUva"
+    target="_blank" class="doc-btn english">
     <span class="icon">🇬🇧</span> Tài liệu Tiếng Anh
   </a>
-  <a href="https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/ErjspIucpIhCi-wujB9HIR4BggIJ8ym_aps6mldfDpRu-Q?e=lfBDaD" target="_blank" class="doc-btn tmu">
+  <a href="https://koha2002-my.sharepoint.com/:f:/g/personal/koha2002_koha2002_onmicrosoft_com/EqO9GauCprJJs0kgYYVk3pcBktGB99axjStsTgL1qdfwvQ?e=fgIC1X" 
+    target="_blank" class="doc-btn tmu">
     <span class="icon">🏛️</span> Tài liệu TMU
   </a>
   <a href="#" class="doc-btn soon" target="_blank" class="doc-btn soon">
