--- a/index.html
+++ b/index.html
@@ -32,20 +32,20 @@
         <div class="feature-title">Tạo mindmap thông minh</div>
         <div class="feature-desc">Tạo sơ đồ tư duy online, hỗ trợ xuất ảnh hoặc PDF, miễn phí.</div>
       </a>
-      <a class="feature" href="y-tuong.html">
-        <img class="feature-img" src="https://cdn-icons-png.flaticon.com/512/1998/1998611.png" alt="Gợi ý ý tưởng">
-        <div class="feature-title">Gợi ý ý tưởng học tập</div>
-        <div class="feature-desc">AI gợi ý ý tưởng, chủ đề thuyết trình, nghiên cứu, bài tập nhóm…</div>
+      <a class="feature" href="app.html">
+        <img class="feature-img" src="https://cdn-icons-png.flaticon.com/512/1998/1998611.png" alt="Phần mềm thường dùng">
+        <div class="feature-title">Các phần mềm cần thiết</div>
+        <div class="feature-desc">Các phần mềm và ứng dụng hỗ trợ cho máy tính của bạn</div>
       </a>
-      <a class="feature" href="viet-lai.html">
+      <a class="feature" href="trick.html">
         <img class="feature-img" src="https://cdn-icons-png.flaticon.com/512/2919/2919600.png" alt="Viết lại nội dung">
-        <div class="feature-title">Viết lại nội dung</div>
-        <div class="feature-desc">Nhờ AI diễn đạt lại văn bản, tóm tắt, tăng sự sáng tạo.</div>
+        <div class="feature-title">Các mẹo cho máy tính</div>
+        <div class="feature-desc">Các cách, phần mềm tối ưu cho máy tính của bạn.</div>
       </a>
       <a class="feature" href="tu-moi.html">
         <img class="feature-img" src="icon-tumoi.png" alt="Học từ mới">
-        <div class="feature-title">Học từ mới</div>
-        <div class="feature-desc">Luyện tập, ghi nhớ, tra cứu từ mới mỗi ngày cùng flashcard & AI.</div>
+        <div class="feature-title">Soon </div>
+        <div class="feature-desc">Soon.</div>
       </a>
     </div>
   </main>
